Fixed opacity in disabled menu options that was allowing background content to bleed through.

--- a/styles/components/menu.scss
+++ b/styles/components/menu.scss
@@ -1,23 +1,5 @@
 // NOTE: this has been moved upstream to badger-css
-:where(.menu) {
-  --select-background: var(--brand-30);
-}
-:where(#{$dark-theme} .menu) {
-  --select-background: var(--brand-20);
-}
-
 .menu {
-  z-index: 100;
-  .item.active.selected {
-    animation: selection 0.3s infinite;
-    @keyframes selection {
-      0%, 100% {
-        background-color: var(--active-background);
-      }
-      50% {
-        background-color: var(--select-background);
-      }
-    }
-  }
+  // background-color: var(--background-color);
 }
 
